<resources>
    <string name="app_name">FinancialPortfolio</string>
    <string name="home">Home</string>
    <string name="deposit">Deposit</string>
    <string name="list_btn">List</string>
    <string name="back_btn">Back</string>
    <string name="history">History</string>
    <string name="assets">Assets</string>
    <string name="portfolio">Portfolio</string>
    <string name="user_assets">Your Assets</string>
    <string name="portfolio_btn">Portfolio</string>
    <string name="settings_btn">Settings</string>
    <string name="settings">Settings</string>
    <string name="default_currency">Choose currency</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_settings">Your Settings</string>
    <string name="default_currency">Choose default currency</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="metadata">Metadata</string>
    <string name="country">Country:</string>
    <string name="sector">Sector:</string>
    <string name="currency">Currency:</string>
    <string name="ticker">Ticker:</string>
    <string name="maturity_date">Maturity date:</string>
    <string name="delete">Delete</string>
    <string name="purchase_date">Purchase date</string>
    <string name="purchase_price">Purchase price</string>
    <string name="current_price">Current price</string>
    <string name="change">Change</string>
    <string name="choose_currency">Choose currency</string>
</resources>