<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:paddingVertical="15dp"
        android:text="@string/home"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/deposit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/deposit"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="1000000$"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/deposit" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.widget.Button
            android:id="@+id/button"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/list_btn_shape"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginHorizontal="5dp"
            android:text="@string/list_btn"
            android:textColor="@color/background" />

        <android.widget.Button
            android:id="@+id/button2"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/list_btn_shape"
            android:text="@string/portfolio_btn"
            android:textColor="@color/background"/>

        <android.widget.Button
            android:id="@+id/button3"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/list_btn_shape"
            android:text="@string/settings_btn"
            android:textColor="@color/background"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>