<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/deposit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/deposit"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deposit"
        tools:text="1000$" />

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </Toolbar>
    </Toolbar>

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginBottom="90dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.widget.Button
        android:id="@+id/to_assets_list_button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/list_btn_shape"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/list_btn"
        android:textColor="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <android.widget.Button
        android:id="@+id/to_portfolio_button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/list_btn_shape"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/portfolio_btn"
        android:textColor="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/to_settings_button"
        app:layout_constraintStart_toEndOf="@+id/to_assets_list_button"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <android.widget.Button
        android:id="@+id/to_settings_button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/list_btn_shape"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/settings_btn"
        android:textColor="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

</androidx.constraintlayout.widget.ConstraintLayout>